fix: Margin and random red strip on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -34,7 +34,7 @@ body {
 .wrapper {
 	margin-inline: auto;
 	width: min(90%, 80rem);
-	margin-top: 1rem;
+	margin-top: 2.6rem;
 }
 
 :root {
